# vascular-flashcards

./: .gitignore  A24.html  B24.html  C24.html  D24.html  E24.html  README.md  main.py  pyproject.toml  requirements.txt
A24_files/: HotSpot_Question.js  default.css  fabric.2.4.6.with.gestures.js  global.js  jquery-image-loader.js  waves.js
B24_files/: main.css  no-right-click-cut-copy.js
C24_files/: flag-icon.css  modals.css  prism.js
E24_files/: css
docs/: index 3.html  index.html
docs/a24/: flashcards.html  flashcards.tsv
docs/abdomengeneralanatomy21/: flashcards.html  flashcards.tsv
docs/abdomengeneralpathology32/: flashcards.html  flashcards.tsv
docs/b24/: flashcards.html  flashcards.tsv
docs/c24/: flashcards.html  flashcards.tsv
docs/cerebrovascularanatomy12/: flashcards.html
docs/cerebrovascularpathology21/: flashcards.html
docs/d24/: flashcards.html
docs/e24/: flashcards.html
docs/extremityarterlialanatomy21/: flashcards.html  flashcards.tsv
docs/extremityarterypathology32/: flashcards.html  flashcards.tsv
docs/extremityvenousanatomy21/: flashcards.html  flashcards.tsv
docs/extremityvenouspathology32/: flashcards.html  flashcards.tsv
docs/physiologicexams12/: flashcards.html
docs/prepreporting8/: flashcards.html
docs/qasafetyspi14/: flashcards.html
docs/usguidedprocedures7/: flashcards.html  flashcards.tsv
docs/vascularsurgery6/: flashcards.html  (+1 more)
flashcards_builder/: __init__.py  __main__.py  cli.py  exporters.py  html_parser.py  models.py  pdf_parser.py  rendering.py  research.py  utils.py
output/: index.html
(+27 files in other folders)
